Fixed search box autocompletion alignment.

--- a/lunchbreak/frontend/scss/components/_search-box.scss
+++ b/lunchbreak/frontend/scss/components/_search-box.scss
@@ -1,9 +1,10 @@
 .search-box {
     position: relative;
+        width: 540px;
+        margin: 0 auto;
 
     .search-box-input {
-        display: flex;
-        justify-content: center;
+        font-size: 0;
 
         input {
             margin-top: 16px;
@@ -39,6 +40,7 @@
         background: white;
         padding: 0;
         border-radius: 0 0 2px 2px;
+        border-top: none;
         z-index: 1;
 
         li {
